# structor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/structor/: base_commands.py  custom_exceptions.py  structor.py  utils.py
tests/: test_main_behavior.py
tests/.structor/: my_template_file.py.struct  template.yaml
